package com.example.eventservice.entity;

public enum EventStatus {
    SCHEDULED,
    ONGOING,
    COMPLETED,
    CANCELLED
}
