package com.example.eventservice.entity;

public enum RegistrationStatus {
    PENDING,
    CONFIRMED,
    CANCELLED,
    ATTENDED
}
