classDiagram
    class Event {
        -int eventId
        -string eventName
        -string eventType
        -DateTime startDate
        -DateTime endDate
        -string location
        -string description
        -EventStatus status
        +createEvent()
        +updateEvent()
        +cancelEvent()
        +getEventDetails()
    }

    class Conference {
        -string theme
        -int numberOfTracks
        -List~Speaker~ speakers
        +addSpeaker()
        +addTrack()
        +getSchedule()
    }

    class Workshop {
        -int maxParticipants
        -string instructor
        -string skillLevel
        -List~string~ materials
        +enrollParticipant()
        +getMaterials()
    }

    class Concert {
        -string artist
        -string genre
        -int ticketsSold
        -decimal ticketPrice
        +bookTicket()
        +getLineup()
    }

    class SportsEvent {
        -string sport
        -string team1
        -string team2
        -string venue
        +updateScore()
        +getMatchDetails()
    }

    class Hackathon {
        -string theme
        -int duration
        -List~string~ technologies
        -List~Team~ teams
        -decimal prizePool
        +registerTeam()
        +submitProject()
        +announceWinners()
    }

    class Organizer {
        -int organizerId
        +createEvent()
        +updateEvent()
        +cancelEvent()
        +getEventDetails()
        +manageEvents()
    }

    class Attendee {
        -int attendeeId
        -string name
        -string email
        -string phone
        +registerForEvent()
        +cancelRegistration()
    }

    class Registration {
        -int registrationId
        -DateTime registrationDate
        -RegistrationStatus status
        -decimal amount
        +confirmRegistration()
        +cancelRegistration()
    }

    class Venue {
        -int venueId
        -string venueName
        -string address
        -int capacity
        -List~string~ facilities
        +checkAvailability()
        +bookVenue()
    }

    class EventStatus {
        <<enumeration>>
        SCHEDULED
        ONGOING
        COMPLETED
        CANCELLED
    }

    class RegistrationStatus {
        <<enumeration>>
        PENDING
        CONFIRMED
        CANCELLED
        ATTENDED
    }

    Event <|-- Conference
    Event <|-- Workshop
    Event <|-- Concert
    Event <|-- SportsEvent
    Event <|-- Hackathon
    
    Organizer "1" --> "*" Event: organizes
    Event "1" --> "*" Registration: has
    Attendee "1" --> "*" Registration: makes
    Event "*" --> "1" Venue: held at
    Event --> EventStatus: has
    Registration --> RegistrationStatus: has